--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
-name = hello_gh_actions
+name = python_codimd
 author = Sören Wegener
-author-email = soerface@flipdot.org
+author-email = wegener92@gmail.com
 summary = This package demonstrates building and publishing Python Packages with GitHubs infrastructure
 description-file = README.md
 description-content-type = text/markdown
 
 [files]
 packages =
-    hello_gh_actions
+    python_codimd
